<resources>
    <string name="app_name">First Class</string>
    <!-- login page strings-->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login_button">LOG IN</string>
    <string name="signup_button">SIGN UP</string>

    <!-- submit review page strings-->
    <string name="submit_review">Submit Review</string>
    <string name="overall_rating_text">Overall Rating: </string>
    <string name="grade">Grade:</string>
    <string name="course_content">Course Content</string>
    <string name="out_of_5_text">/5.0</string>
    <string name="hrs_per_week">Hours/Week</string>
    <string name="hint_grade">5.0</string>
    <string name="hint_workload">15.0</string>
    <string name="hint_comments">Leave your comments here:</string>

    <string name="prof_rating">Professor Rating</string>
    <string name="prof_sample">Bob Singh</string>
    <string name="comment">Comments</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string-array name="semesters_array">
        <item>2013 Fall</item>
        <item>2014 Spring</item>
        <item>2014 Fall</item>
        <item>2015 Spring</item>

    </string-array>
    <string-array name="schools_array">
        <item>ECE</item>
        <item>SCS</item>
        <item>BME</item>
    </string-array>

    <!--department list and department course list-->
    <string name="title_activity_department_list">Departments</string>
    <string name="title_activity_department_course_list">Department Course List</string>
    <string name="title_register">title_register</string>
    <string name="admin_management">admin_management</string>

    <!--nianzu's strings-->
    <string name="title_activity_instructor">InstructorActivity</string>
    <string name="title_activity_lisa">LisaActivity</string>
    <string name="title_activity_bart">BartActivity</string>
    <string name="User1Name">User 1</string>
    <string name="NumofLikes1">989</string>
    <string name="User1Comment">Ay, caramba! This course is so amazing, you all gotta take this!!</string>
    <string name="CourseTitle">18641 Java for Smart Phone Development</string>
    <string name="InstructorName">Bob Singh</string>

</resources>
